2002-07-22  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/mathfunc.[ch] (dgeom, pgeom): Added.

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/mathfunc.[ch] (random_gaussian_tail): Added.
	
2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/mathfunc.[ch] (random_landau): Added.

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/mathfunc.[ch] (random_rayleigh_tail): Added.

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/mathfunc.[ch] (random_exppow_pdf, random_exppow,
	random_gaussian, random_gaussian_pdf, random_laplace_pdf): Added.

2002-07-21  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (cb_sheet_label_button_press) : be
	  consistent and select before bringing up the context menu given
	  that the menu is being applied to the tab.

2002-07-20  Jon K Hellan  <hellan@acm.org>

	* configure.in: Test for BROKEN_PY_INITIALIZE feature (before
	Python 2.0, Python would write to the environment, and we had to
	work around it.)

	* acconfig.h: Add BROKEN_PY_INITIALIZE

2002-07-20  Jody Goldberg <jody@gnome.org>

	* src/item-grid.c (item_grid_button_press) : tidy the interface
	  handle all types button presses, not just button1.
	  Button 3 is not consistent in selecting and bringing up context menu
	  rather than just the menu (Thanks to the OpenOffice folk for noticing)
	(item_grid_event) : move the press logic into item_grid_press_event.

2002-07-20  Jody Goldberg <jody@gnome.org>

	* src/item-grid.c (item_grid_init) : init the cursor timer.
	(item_grid_event) : handle hlink cursor transitions and tips.
	(ig_clear_hlink_tip) : new.
	(item_grid_destroy) : clear the cursor timer and any visible tips.
	(cb_cursor_come_to_rest) : new.
	(cb_cursor_motion) : new.

	* src/sheet-control-gui.c (scg_set_display_cursor) : in the non-object
	  case use the pane's current cursor.

2002-07-18  Jody Goldberg <jody@gnome.org>
