@@ -1,3 +1,8 @@
+2002-07-25  Morten Welinder  <terra@diku.dk>
+
+	* src/mathfunc.c (dgeom, pgeom): Properly import using
+	tools/import-R.
+
 2002-07-22  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
 
 	* src/mathfunc.[ch] (dgeom, pgeom): Added.
